argocd/app/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitops-webapp
  labels:
    app: gitops-webapp
  annotations: 
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cert-manager
spec:
  tls:
    - secretName: app-tls
      hosts:
        - app.k8sproject.ml
  rules:
  - host: app.k8sproject.ml
    http:
      paths:
      - backend:
          serviceName: gitops-webapp-svc
          servicePort: http
